[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/monkey_1.png" type="Texture" id=1]
[ext_resource path="res://characters/arm.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://characters/monkey_player.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/portal.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "throw"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 70.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "throw"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 180.0, 100.0, 180.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 4, 4 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[node name="monkey_player" type="KinematicBody2D" groups=["monkey"]]
script = ExtResource( 4 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 3, -28.3, 3, -25.3, 4.4, -21, 7.5, -21, 21, -13.1, 21, -9, 22, 13, 20.1, 13, 16.2, 20, 13.1, 20, 4, 22.5, 4, 28.1, -2.2, 32, -8, 32, -12, 27.8, -12, 20.4, -19, 22.8, -19, 19.3, -19.7, 14.9, -26, 11.1, -26, 6.8, -23.7, -7, -22.1, -7, -18.2, -14, -15.7, -14, -12, -17, -12, -25.8, -8, -29.8, -8, -32, -5.7, -32 )

[node name="left_arm" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 2, -13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="left_arm"]
anims/RESET = SubResource( 1 )
anims/throw = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_right = 3000
limit_bottom = 2500

[node name="right_arm" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 5, 21 )
rotation = 3.14159

[node name="hand" parent="right_arm" index="1"]
rotation = 3.14159

[node name="AnimationPlayer" type="AnimationPlayer" parent="right_arm"]
anims/RESET = SubResource( 3 )
anims/throw = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="mb_sprite" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( -704, -394 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/mb_sprite"]
"anims/New Anim" = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="mb_label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = -656.0
margin_top = -413.0
margin_right = -604.0
margin_bottom = -365.0
custom_fonts/font = SubResource( 5 )
text = "x 0"
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="right_arm"]
